src/Sites/Sites/docs/v1.0/Microsoft.Graph.Sites.md
---
Module Name: Microsoft.Graph.Sites
Module Guid: b01bcd40-90c7-4d4b-a24c-19a761f61542
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.sites
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.Sites Module
## Description
Microsoft Graph PowerShell Cmdlets

## Microsoft.Graph.Sites Cmdlets
### [Add-MgSiteContentTypeBaseTypeCopy](Add-MgSiteContentTypeBaseTypeCopy.md)
Invoke action addCopy

### [Add-MgSiteContentTypeCopy](Add-MgSiteContentTypeCopy.md)
Invoke action addCopy

### [Add-MgSiteListContentTypeBaseTypeCopy](Add-MgSiteListContentTypeBaseTypeCopy.md)
Invoke action addCopy

### [Add-MgSiteListContentTypeCopy](Add-MgSiteListContentTypeCopy.md)
Invoke action addCopy

### [Copy-MgSiteContentTypeBaseToDefaultContentLocation](Copy-MgSiteContentTypeBaseToDefaultContentLocation.md)
Invoke action copyToDefaultContentLocation

### [Copy-MgSiteContentTypeToDefaultContentLocation](Copy-MgSiteContentTypeToDefaultContentLocation.md)
Invoke action copyToDefaultContentLocation

### [Copy-MgSiteListContentTypeBaseToDefaultContentLocation](Copy-MgSiteListContentTypeBaseToDefaultContentLocation.md)
Invoke action copyToDefaultContentLocation

### [Copy-MgSiteListContentTypeToDefaultContentLocation](Copy-MgSiteListContentTypeToDefaultContentLocation.md)
Invoke action copyToDefaultContentLocation

### [Copy-MgSiteOnenoteNotebook](Copy-MgSiteOnenoteNotebook.md)
Invoke action copyNotebook

### [Copy-MgSiteOnenotePageToSection](Copy-MgSiteOnenotePageToSection.md)
Invoke action copyToSection

### [Copy-MgSiteOnenoteSectionToNotebook](Copy-MgSiteOnenoteSectionToNotebook.md)
Invoke action copyToNotebook

### [Copy-MgSiteOnenoteSectionToSectionGroup](Copy-MgSiteOnenoteSectionToSectionGroup.md)
Invoke action copyToSectionGroup

### [Get-MgGroupSite](Get-MgGroupSite.md)
The list of SharePoint sites in this group.
Access the default site with /sites/root.

### [Get-MgSite](Get-MgSite.md)
Get entity from sites by key

### [Get-MgSiteActivityByInterval](Get-MgSiteActivityByInterval.md)
Invoke function getActivitiesByInterval

### [Get-MgSiteAnalytic](Get-MgSiteAnalytic.md)
Analytics about the view activities that took place in this site.

### [Get-MgSiteAnalyticByRef](Get-MgSiteAnalyticByRef.md)
Analytics about the view activities that took place in this site.

### [Get-MgSiteApplicableContentType](Get-MgSiteApplicableContentType.md)
Invoke function getApplicableContentTypesForList

### [Get-MgSiteByPath](Get-MgSiteByPath.md)
Invoke function getByPath

### [Get-MgSiteColumn](Get-MgSiteColumn.md)
The collection of column definitions reusable across lists under this site.

### [Get-MgSiteColumnSourceColumn](Get-MgSiteColumnSourceColumn.md)
The source column for the content type column.

### [Get-MgSiteColumnSourceColumnByRef](Get-MgSiteColumnSourceColumnByRef.md)
The source column for the content type column.

### [Get-MgSiteContentType](Get-MgSiteContentType.md)
The collection of content types defined for this site.

### [Get-MgSiteContentTypeBase](Get-MgSiteContentTypeBase.md)
Parent contentType from which this content type is derived.

### [Get-MgSiteContentTypeBaseByRef](Get-MgSiteContentTypeBaseByRef.md)
Parent contentType from which this content type is derived.

### [Get-MgSiteContentTypeBaseType](Get-MgSiteContentTypeBaseType.md)
The collection of content types that are ancestors of this content type.

### [Get-MgSiteContentTypeBaseTypeByRef](Get-MgSiteContentTypeBaseTypeByRef.md)
The collection of content types that are ancestors of this content type.

### [Get-MgSiteContentTypeColumn](Get-MgSiteContentTypeColumn.md)
The collection of column definitions for this contentType.

### [Get-MgSiteContentTypeColumnLink](Get-MgSiteContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [Get-MgSiteContentTypeColumnPosition](Get-MgSiteContentTypeColumnPosition.md)
Column order information in a content type.

### [Get-MgSiteContentTypeColumnPositionByRef](Get-MgSiteContentTypeColumnPositionByRef.md)
Column order information in a content type.

### [Get-MgSiteContentTypeColumnSourceColumn](Get-MgSiteContentTypeColumnSourceColumn.md)
The source column for the content type column.

### [Get-MgSiteContentTypeColumnSourceColumnByRef](Get-MgSiteContentTypeColumnSourceColumnByRef.md)
The source column for the content type column.

### [Get-MgSiteDrive](Get-MgSiteDrive.md)
The default drive (document library) for this site.

### [Get-MgSiteDriveByRef](Get-MgSiteDriveByRef.md)
The default drive (document library) for this site.

### [Get-MgSiteExternalColumn](Get-MgSiteExternalColumn.md)
The collection of column definitions available in the site that are referenced from the sites in the parent hierarchy of the current site.

### [Get-MgSiteExternalColumnByRef](Get-MgSiteExternalColumnByRef.md)
The collection of column definitions available in the site that are referenced from the sites in the parent hierarchy of the current site.

### [Get-MgSiteList](Get-MgSiteList.md)
The collection of lists under this site.

### [Get-MgSiteListColumn](Get-MgSiteListColumn.md)
The collection of field definitions for this list.

### [Get-MgSiteListColumnSourceColumn](Get-MgSiteListColumnSourceColumn.md)
The source column for the content type column.

### [Get-MgSiteListColumnSourceColumnByRef](Get-MgSiteListColumnSourceColumnByRef.md)
The source column for the content type column.

### [Get-MgSiteListContentType](Get-MgSiteListContentType.md)
The collection of content types present in this list.

### [Get-MgSiteListContentTypeBase](Get-MgSiteListContentTypeBase.md)
Parent contentType from which this content type is derived.

### [Get-MgSiteListContentTypeBaseByRef](Get-MgSiteListContentTypeBaseByRef.md)
Parent contentType from which this content type is derived.

### [Get-MgSiteListContentTypeBaseType](Get-MgSiteListContentTypeBaseType.md)
The collection of content types that are ancestors of this content type.

### [Get-MgSiteListContentTypeBaseTypeByRef](Get-MgSiteListContentTypeBaseTypeByRef.md)
The collection of content types that are ancestors of this content type.

### [Get-MgSiteListContentTypeColumn](Get-MgSiteListContentTypeColumn.md)
The collection of column definitions for this contentType.

### [Get-MgSiteListContentTypeColumnLink](Get-MgSiteListContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [Get-MgSiteListContentTypeColumnPosition](Get-MgSiteListContentTypeColumnPosition.md)
Column order information in a content type.

### [Get-MgSiteListContentTypeColumnPositionByRef](Get-MgSiteListContentTypeColumnPositionByRef.md)
Column order information in a content type.

### [Get-MgSiteListContentTypeColumnSourceColumn](Get-MgSiteListContentTypeColumnSourceColumn.md)
The source column for the content type column.

### [Get-MgSiteListContentTypeColumnSourceColumnByRef](Get-MgSiteListContentTypeColumnSourceColumnByRef.md)
The source column for the content type column.

### [Get-MgSiteListDrive](Get-MgSiteListDrive.md)
Only present on document libraries.
Allows access to the list as a [drive][] resource with [driveItems][driveItem].

### [Get-MgSiteListDriveByRef](Get-MgSiteListDriveByRef.md)
Only present on document libraries.
Allows access to the list as a [drive][] resource with [driveItems][driveItem].

### [Get-MgSiteListItem](Get-MgSiteListItem.md)
All items contained in the list.

### [Get-MgSiteListItemActivityByInterval](Get-MgSiteListItemActivityByInterval.md)
Invoke function getActivitiesByInterval

### [Get-MgSiteListItemAnalytic](Get-MgSiteListItemAnalytic.md)
Analytics about the view activities that took place on this item.

### [Get-MgSiteListItemAnalyticByRef](Get-MgSiteListItemAnalyticByRef.md)
Analytics about the view activities that took place on this item.

### [Get-MgSiteListItemDriveItem](Get-MgSiteListItemDriveItem.md)
For document libraries, the driveItem relationship exposes the listItem as a [driveItem][]

### [Get-MgSiteListItemDriveItemByRef](Get-MgSiteListItemDriveItemByRef.md)
For document libraries, the driveItem relationship exposes the listItem as a [driveItem][]

### [Get-MgSiteListItemField](Get-MgSiteListItemField.md)
The values of the columns set on this list item.

### [Get-MgSiteListItemVersion](Get-MgSiteListItemVersion.md)
The list of previous versions of the list item.

### [Get-MgSiteListItemVersionField](Get-MgSiteListItemVersionField.md)
A collection of the fields and values for this version of the list item.

### [Get-MgSiteListSubscription](Get-MgSiteListSubscription.md)
The set of subscriptions on the list.

### [Get-MgSiteOnenoteNotebookFromWebUrl](Get-MgSiteOnenoteNotebookFromWebUrl.md)
Invoke action getNotebookFromWebUrl

### [Get-MgSitePermission](Get-MgSitePermission.md)
The permissions associated with the site.
Nullable.

### [Get-MgSiteRecentNotebook](Get-MgSiteRecentNotebook.md)
Invoke function getRecentNotebooks

### [Get-MgSiteSiteByRef](Get-MgSiteSiteByRef.md)
The collection of the sub-sites under this site.

### [Get-MgSiteTermStore](Get-MgSiteTermStore.md)
The default termStore under this site.

### [Get-MgSiteTermStoreGroup](Get-MgSiteTermStoreGroup.md)
Collection of all groups available in the term store.

### [Get-MgSiteTermStoreGroupSet](Get-MgSiteTermStoreGroupSet.md)
All sets under the group in a term [store].

### [Get-MgSiteTermStoreGroupSetChild](Get-MgSiteTermStoreGroupSetChild.md)
Children terms of set in term [store].

### [Get-MgSiteTermStoreGroupSetChildRelation](Get-MgSiteTermStoreGroupSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Get-MgSiteTermStoreGroupSetChildRelationFromTerm](Get-MgSiteTermStoreGroupSetChildRelationFromTerm.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreGroupSetChildRelationFromTermByRef](Get-MgSiteTermStoreGroupSetChildRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreGroupSetChildRelationSet](Get-MgSiteTermStoreGroupSetChildRelationSet.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreGroupSetChildRelationSetByRef](Get-MgSiteTermStoreGroupSetChildRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreGroupSetChildRelationToTerm](Get-MgSiteTermStoreGroupSetChildRelationToTerm.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreGroupSetChildRelationToTermByRef](Get-MgSiteTermStoreGroupSetChildRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreGroupSetChildSet](Get-MgSiteTermStoreGroupSetChildSet.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreGroupSetChildSetByRef](Get-MgSiteTermStoreGroupSetChildSetByRef.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreGroupSetParentGroup](Get-MgSiteTermStoreGroupSetParentGroup.md)
The parent [group] that contains the set.

### [Get-MgSiteTermStoreGroupSetRelation](Get-MgSiteTermStoreGroupSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [Get-MgSiteTermStoreGroupSetRelationFromTerm](Get-MgSiteTermStoreGroupSetRelationFromTerm.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreGroupSetRelationFromTermByRef](Get-MgSiteTermStoreGroupSetRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreGroupSetRelationSet](Get-MgSiteTermStoreGroupSetRelationSet.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreGroupSetRelationSetByRef](Get-MgSiteTermStoreGroupSetRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreGroupSetRelationToTerm](Get-MgSiteTermStoreGroupSetRelationToTerm.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreGroupSetRelationToTermByRef](Get-MgSiteTermStoreGroupSetRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreGroupSetTerm](Get-MgSiteTermStoreGroupSetTerm.md)
All the terms under the set.

### [Get-MgSiteTermStoreGroupSetTermChild](Get-MgSiteTermStoreGroupSetTermChild.md)
Children of current term.

### [Get-MgSiteTermStoreGroupSetTermRelation](Get-MgSiteTermStoreGroupSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Get-MgSiteTermStoreGroupSetTermRelationFromTerm](Get-MgSiteTermStoreGroupSetTermRelationFromTerm.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreGroupSetTermRelationFromTermByRef](Get-MgSiteTermStoreGroupSetTermRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreGroupSetTermRelationSet](Get-MgSiteTermStoreGroupSetTermRelationSet.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreGroupSetTermRelationSetByRef](Get-MgSiteTermStoreGroupSetTermRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreGroupSetTermRelationToTerm](Get-MgSiteTermStoreGroupSetTermRelationToTerm.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreGroupSetTermRelationToTermByRef](Get-MgSiteTermStoreGroupSetTermRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreGroupSetTermSet](Get-MgSiteTermStoreGroupSetTermSet.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreGroupSetTermSetByRef](Get-MgSiteTermStoreGroupSetTermSetByRef.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreSet](Get-MgSiteTermStoreSet.md)
Collection of all sets available in the term store.

### [Get-MgSiteTermStoreSetChild](Get-MgSiteTermStoreSetChild.md)
Children terms of set in term [store].

### [Get-MgSiteTermStoreSetChildRelation](Get-MgSiteTermStoreSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Get-MgSiteTermStoreSetChildRelationFromTerm](Get-MgSiteTermStoreSetChildRelationFromTerm.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreSetChildRelationFromTermByRef](Get-MgSiteTermStoreSetChildRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreSetChildRelationSet](Get-MgSiteTermStoreSetChildRelationSet.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreSetChildRelationSetByRef](Get-MgSiteTermStoreSetChildRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreSetChildRelationToTerm](Get-MgSiteTermStoreSetChildRelationToTerm.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreSetChildRelationToTermByRef](Get-MgSiteTermStoreSetChildRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreSetChildSet](Get-MgSiteTermStoreSetChildSet.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreSetChildSetByRef](Get-MgSiteTermStoreSetChildSetByRef.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreSetParentGroup](Get-MgSiteTermStoreSetParentGroup.md)
The parent [group] that contains the set.

### [Get-MgSiteTermStoreSetParentGroupSet](Get-MgSiteTermStoreSetParentGroupSet.md)
All sets under the group in a term [store].

### [Get-MgSiteTermStoreSetRelation](Get-MgSiteTermStoreSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [Get-MgSiteTermStoreSetRelationFromTerm](Get-MgSiteTermStoreSetRelationFromTerm.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreSetRelationFromTermByRef](Get-MgSiteTermStoreSetRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreSetRelationSet](Get-MgSiteTermStoreSetRelationSet.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreSetRelationSetByRef](Get-MgSiteTermStoreSetRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreSetRelationToTerm](Get-MgSiteTermStoreSetRelationToTerm.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreSetRelationToTermByRef](Get-MgSiteTermStoreSetRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreSetTerm](Get-MgSiteTermStoreSetTerm.md)
All the terms under the set.

### [Get-MgSiteTermStoreSetTermChild](Get-MgSiteTermStoreSetTermChild.md)
Children of current term.

### [Get-MgSiteTermStoreSetTermRelation](Get-MgSiteTermStoreSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Get-MgSiteTermStoreSetTermRelationFromTerm](Get-MgSiteTermStoreSetTermRelationFromTerm.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreSetTermRelationFromTermByRef](Get-MgSiteTermStoreSetTermRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Get-MgSiteTermStoreSetTermRelationSet](Get-MgSiteTermStoreSetTermRelationSet.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreSetTermRelationSetByRef](Get-MgSiteTermStoreSetTermRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Get-MgSiteTermStoreSetTermRelationToTerm](Get-MgSiteTermStoreSetTermRelationToTerm.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreSetTermRelationToTermByRef](Get-MgSiteTermStoreSetTermRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Get-MgSiteTermStoreSetTermSet](Get-MgSiteTermStoreSetTermSet.md)
The [set] in which the term is created.

### [Get-MgSiteTermStoreSetTermSetByRef](Get-MgSiteTermStoreSetTermSetByRef.md)
The [set] in which the term is created.

### [Get-MgSubSite](Get-MgSubSite.md)
The collection of the sub-sites under this site.

### [Get-MgUserFollowedSite](Get-MgUserFollowedSite.md)
Get followedSites from users

### [Get-MgUserFollowedSiteByRef](Get-MgUserFollowedSiteByRef.md)
Get ref of followedSites from users

### [Grant-MgSitePermission](Grant-MgSitePermission.md)
Invoke action grant

### [Invoke-MgPreviewSiteOnenotePage](Invoke-MgPreviewSiteOnenotePage.md)
Invoke function preview

### [Join-MgSiteContentType](Join-MgSiteContentType.md)
Invoke action associateWithHubSites

### [Join-MgSiteContentTypeBase](Join-MgSiteContentTypeBase.md)
Invoke action associateWithHubSites

### [Join-MgSiteListContentType](Join-MgSiteListContentType.md)
Invoke action associateWithHubSites

### [Join-MgSiteListContentTypeBase](Join-MgSiteListContentTypeBase.md)
Invoke action associateWithHubSites

### [New-MgGroupSite](New-MgGroupSite.md)
The list of SharePoint sites in this group.
Access the default site with /sites/root.

### [New-MgSite](New-MgSite.md)
Add new entity to sites

### [New-MgSiteColumn](New-MgSiteColumn.md)
The collection of column definitions reusable across lists under this site.

### [New-MgSiteContentType](New-MgSiteContentType.md)
The collection of content types defined for this site.

### [New-MgSiteContentTypeBaseTypeByRef](New-MgSiteContentTypeBaseTypeByRef.md)
The collection of content types that are ancestors of this content type.

### [New-MgSiteContentTypeColumn](New-MgSiteContentTypeColumn.md)
The collection of column definitions for this contentType.

### [New-MgSiteContentTypeColumnLink](New-MgSiteContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [New-MgSiteContentTypeColumnPositionByRef](New-MgSiteContentTypeColumnPositionByRef.md)
Column order information in a content type.

### [New-MgSiteDriveByRef](New-MgSiteDriveByRef.md)
The collection of drives (document libraries) under this site.

### [New-MgSiteExternalColumnByRef](New-MgSiteExternalColumnByRef.md)
The collection of column definitions available in the site that are referenced from the sites in the parent hierarchy of the current site.

### [New-MgSiteList](New-MgSiteList.md)
The collection of lists under this site.

### [New-MgSiteListColumn](New-MgSiteListColumn.md)
The collection of field definitions for this list.

### [New-MgSiteListContentType](New-MgSiteListContentType.md)
The collection of content types present in this list.

### [New-MgSiteListContentTypeBaseTypeByRef](New-MgSiteListContentTypeBaseTypeByRef.md)
The collection of content types that are ancestors of this content type.

### [New-MgSiteListContentTypeColumn](New-MgSiteListContentTypeColumn.md)
The collection of column definitions for this contentType.

### [New-MgSiteListContentTypeColumnLink](New-MgSiteListContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [New-MgSiteListContentTypeColumnPositionByRef](New-MgSiteListContentTypeColumnPositionByRef.md)
Column order information in a content type.

### [New-MgSiteListItem](New-MgSiteListItem.md)
All items contained in the list.

### [New-MgSiteListItemVersion](New-MgSiteListItemVersion.md)
The list of previous versions of the list item.

### [New-MgSiteListSubscription](New-MgSiteListSubscription.md)
The set of subscriptions on the list.

### [New-MgSitePermission](New-MgSitePermission.md)
The permissions associated with the site.
Nullable.

### [New-MgSiteSiteByRef](New-MgSiteSiteByRef.md)
The collection of the sub-sites under this site.

### [New-MgSiteTermStore](New-MgSiteTermStore.md)
The collection of termStores under this site.

### [New-MgSiteTermStoreGroup](New-MgSiteTermStoreGroup.md)
Collection of all groups available in the term store.

### [New-MgSiteTermStoreGroupSet](New-MgSiteTermStoreGroupSet.md)
All sets under the group in a term [store].

### [New-MgSiteTermStoreGroupSetChild](New-MgSiteTermStoreGroupSetChild.md)
Children terms of set in term [store].

### [New-MgSiteTermStoreGroupSetChildRelation](New-MgSiteTermStoreGroupSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [New-MgSiteTermStoreGroupSetRelation](New-MgSiteTermStoreGroupSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [New-MgSiteTermStoreGroupSetTerm](New-MgSiteTermStoreGroupSetTerm.md)
All the terms under the set.

### [New-MgSiteTermStoreGroupSetTermChild](New-MgSiteTermStoreGroupSetTermChild.md)
Children of current term.

### [New-MgSiteTermStoreGroupSetTermRelation](New-MgSiteTermStoreGroupSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [New-MgSiteTermStoreSet](New-MgSiteTermStoreSet.md)
Collection of all sets available in the term store.

### [New-MgSiteTermStoreSetChild](New-MgSiteTermStoreSetChild.md)
Children terms of set in term [store].

### [New-MgSiteTermStoreSetChildRelation](New-MgSiteTermStoreSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [New-MgSiteTermStoreSetParentGroupSet](New-MgSiteTermStoreSetParentGroupSet.md)
All sets under the group in a term [store].

### [New-MgSiteTermStoreSetRelation](New-MgSiteTermStoreSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [New-MgSiteTermStoreSetTerm](New-MgSiteTermStoreSetTerm.md)
All the terms under the set.

### [New-MgSiteTermStoreSetTermChild](New-MgSiteTermStoreSetTermChild.md)
Children of current term.

### [New-MgSiteTermStoreSetTermRelation](New-MgSiteTermStoreSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [New-MgUserFollowedSiteByRef](New-MgUserFollowedSiteByRef.md)
Create new navigation property ref to followedSites for users

### [Publish-MgSiteContentType](Publish-MgSiteContentType.md)
Invoke action publish

### [Publish-MgSiteContentTypeBase](Publish-MgSiteContentTypeBase.md)
Invoke action publish

### [Publish-MgSiteListContentType](Publish-MgSiteListContentType.md)
Invoke action publish

### [Publish-MgSiteListContentTypeBase](Publish-MgSiteListContentTypeBase.md)
Invoke action publish

### [Remove-MgGroupSite](Remove-MgGroupSite.md)
The list of SharePoint sites in this group.
Access the default site with /sites/root.

### [Remove-MgSiteAnalyticByRef](Remove-MgSiteAnalyticByRef.md)
Analytics about the view activities that took place in this site.

### [Remove-MgSiteColumn](Remove-MgSiteColumn.md)
The collection of column definitions reusable across lists under this site.

### [Remove-MgSiteColumnSourceColumnByRef](Remove-MgSiteColumnSourceColumnByRef.md)
The source column for the content type column.

### [Remove-MgSiteContentType](Remove-MgSiteContentType.md)
The collection of content types defined for this site.

### [Remove-MgSiteContentTypeBaseByRef](Remove-MgSiteContentTypeBaseByRef.md)
Parent contentType from which this content type is derived.

### [Remove-MgSiteContentTypeColumn](Remove-MgSiteContentTypeColumn.md)
The collection of column definitions for this contentType.

### [Remove-MgSiteContentTypeColumnLink](Remove-MgSiteContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [Remove-MgSiteContentTypeColumnSourceColumnByRef](Remove-MgSiteContentTypeColumnSourceColumnByRef.md)
The source column for the content type column.

### [Remove-MgSiteDriveByRef](Remove-MgSiteDriveByRef.md)
The default drive (document library) for this site.

### [Remove-MgSiteList](Remove-MgSiteList.md)
The collection of lists under this site.

### [Remove-MgSiteListColumn](Remove-MgSiteListColumn.md)
The collection of field definitions for this list.

### [Remove-MgSiteListColumnSourceColumnByRef](Remove-MgSiteListColumnSourceColumnByRef.md)
The source column for the content type column.

### [Remove-MgSiteListContentType](Remove-MgSiteListContentType.md)
The collection of content types present in this list.

### [Remove-MgSiteListContentTypeBaseByRef](Remove-MgSiteListContentTypeBaseByRef.md)
Parent contentType from which this content type is derived.

### [Remove-MgSiteListContentTypeColumn](Remove-MgSiteListContentTypeColumn.md)
The collection of column definitions for this contentType.

### [Remove-MgSiteListContentTypeColumnLink](Remove-MgSiteListContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [Remove-MgSiteListContentTypeColumnSourceColumnByRef](Remove-MgSiteListContentTypeColumnSourceColumnByRef.md)
The source column for the content type column.

### [Remove-MgSiteListDriveByRef](Remove-MgSiteListDriveByRef.md)
Only present on document libraries.
Allows access to the list as a [drive][] resource with [driveItems][driveItem].

### [Remove-MgSiteListItem](Remove-MgSiteListItem.md)
All items contained in the list.

### [Remove-MgSiteListItemAnalyticByRef](Remove-MgSiteListItemAnalyticByRef.md)
Analytics about the view activities that took place on this item.

### [Remove-MgSiteListItemDriveItemByRef](Remove-MgSiteListItemDriveItemByRef.md)
For document libraries, the driveItem relationship exposes the listItem as a [driveItem][]

### [Remove-MgSiteListItemField](Remove-MgSiteListItemField.md)
The values of the columns set on this list item.

### [Remove-MgSiteListItemVersion](Remove-MgSiteListItemVersion.md)
The list of previous versions of the list item.

### [Remove-MgSiteListItemVersionField](Remove-MgSiteListItemVersionField.md)
A collection of the fields and values for this version of the list item.

### [Remove-MgSiteListSubscription](Remove-MgSiteListSubscription.md)
The set of subscriptions on the list.

### [Remove-MgSitePermission](Remove-MgSitePermission.md)
The permissions associated with the site.
Nullable.

### [Remove-MgSiteTermStore](Remove-MgSiteTermStore.md)
The default termStore under this site.

### [Remove-MgSiteTermStoreGroup](Remove-MgSiteTermStoreGroup.md)
Collection of all groups available in the term store.

### [Remove-MgSiteTermStoreGroupSet](Remove-MgSiteTermStoreGroupSet.md)
All sets under the group in a term [store].

### [Remove-MgSiteTermStoreGroupSetChild](Remove-MgSiteTermStoreGroupSetChild.md)
Children terms of set in term [store].

### [Remove-MgSiteTermStoreGroupSetChildRelation](Remove-MgSiteTermStoreGroupSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Remove-MgSiteTermStoreGroupSetChildRelationFromTermByRef](Remove-MgSiteTermStoreGroupSetChildRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Remove-MgSiteTermStoreGroupSetChildRelationSetByRef](Remove-MgSiteTermStoreGroupSetChildRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Remove-MgSiteTermStoreGroupSetChildRelationToTermByRef](Remove-MgSiteTermStoreGroupSetChildRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Remove-MgSiteTermStoreGroupSetChildSetByRef](Remove-MgSiteTermStoreGroupSetChildSetByRef.md)
The [set] in which the term is created.

### [Remove-MgSiteTermStoreGroupSetParentGroup](Remove-MgSiteTermStoreGroupSetParentGroup.md)
The parent [group] that contains the set.

### [Remove-MgSiteTermStoreGroupSetRelation](Remove-MgSiteTermStoreGroupSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [Remove-MgSiteTermStoreGroupSetRelationFromTermByRef](Remove-MgSiteTermStoreGroupSetRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Remove-MgSiteTermStoreGroupSetRelationSetByRef](Remove-MgSiteTermStoreGroupSetRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Remove-MgSiteTermStoreGroupSetRelationToTermByRef](Remove-MgSiteTermStoreGroupSetRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Remove-MgSiteTermStoreGroupSetTerm](Remove-MgSiteTermStoreGroupSetTerm.md)
All the terms under the set.

### [Remove-MgSiteTermStoreGroupSetTermChild](Remove-MgSiteTermStoreGroupSetTermChild.md)
Children of current term.

### [Remove-MgSiteTermStoreGroupSetTermRelation](Remove-MgSiteTermStoreGroupSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Remove-MgSiteTermStoreGroupSetTermRelationFromTermByRef](Remove-MgSiteTermStoreGroupSetTermRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Remove-MgSiteTermStoreGroupSetTermRelationSetByRef](Remove-MgSiteTermStoreGroupSetTermRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Remove-MgSiteTermStoreGroupSetTermRelationToTermByRef](Remove-MgSiteTermStoreGroupSetTermRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Remove-MgSiteTermStoreGroupSetTermSetByRef](Remove-MgSiteTermStoreGroupSetTermSetByRef.md)
The [set] in which the term is created.

### [Remove-MgSiteTermStoreSet](Remove-MgSiteTermStoreSet.md)
Collection of all sets available in the term store.

### [Remove-MgSiteTermStoreSetChild](Remove-MgSiteTermStoreSetChild.md)
Children terms of set in term [store].

### [Remove-MgSiteTermStoreSetChildRelation](Remove-MgSiteTermStoreSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Remove-MgSiteTermStoreSetChildRelationFromTermByRef](Remove-MgSiteTermStoreSetChildRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Remove-MgSiteTermStoreSetChildRelationSetByRef](Remove-MgSiteTermStoreSetChildRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Remove-MgSiteTermStoreSetChildRelationToTermByRef](Remove-MgSiteTermStoreSetChildRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Remove-MgSiteTermStoreSetChildSetByRef](Remove-MgSiteTermStoreSetChildSetByRef.md)
The [set] in which the term is created.

### [Remove-MgSiteTermStoreSetParentGroup](Remove-MgSiteTermStoreSetParentGroup.md)
The parent [group] that contains the set.

### [Remove-MgSiteTermStoreSetParentGroupSet](Remove-MgSiteTermStoreSetParentGroupSet.md)
All sets under the group in a term [store].

### [Remove-MgSiteTermStoreSetRelation](Remove-MgSiteTermStoreSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [Remove-MgSiteTermStoreSetRelationFromTermByRef](Remove-MgSiteTermStoreSetRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Remove-MgSiteTermStoreSetRelationSetByRef](Remove-MgSiteTermStoreSetRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Remove-MgSiteTermStoreSetRelationToTermByRef](Remove-MgSiteTermStoreSetRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Remove-MgSiteTermStoreSetTerm](Remove-MgSiteTermStoreSetTerm.md)
All the terms under the set.

### [Remove-MgSiteTermStoreSetTermChild](Remove-MgSiteTermStoreSetTermChild.md)
Children of current term.

### [Remove-MgSiteTermStoreSetTermRelation](Remove-MgSiteTermStoreSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Remove-MgSiteTermStoreSetTermRelationFromTermByRef](Remove-MgSiteTermStoreSetTermRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Remove-MgSiteTermStoreSetTermRelationSetByRef](Remove-MgSiteTermStoreSetTermRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Remove-MgSiteTermStoreSetTermRelationToTermByRef](Remove-MgSiteTermStoreSetTermRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Remove-MgSiteTermStoreSetTermSetByRef](Remove-MgSiteTermStoreSetTermSetByRef.md)
The [set] in which the term is created.

### [Restore-MgSiteListItemVersion](Restore-MgSiteListItemVersion.md)
Invoke action restoreVersion

### [Set-MgSiteAnalyticByRef](Set-MgSiteAnalyticByRef.md)
Analytics about the view activities that took place in this site.

### [Set-MgSiteColumnSourceColumnByRef](Set-MgSiteColumnSourceColumnByRef.md)
The source column for the content type column.

### [Set-MgSiteContentTypeBaseByRef](Set-MgSiteContentTypeBaseByRef.md)
Parent contentType from which this content type is derived.

### [Set-MgSiteContentTypeColumnSourceColumnByRef](Set-MgSiteContentTypeColumnSourceColumnByRef.md)
The source column for the content type column.

### [Set-MgSiteDriveByRef](Set-MgSiteDriveByRef.md)
The default drive (document library) for this site.

### [Set-MgSiteListColumnSourceColumnByRef](Set-MgSiteListColumnSourceColumnByRef.md)
The source column for the content type column.

### [Set-MgSiteListContentTypeBaseByRef](Set-MgSiteListContentTypeBaseByRef.md)
Parent contentType from which this content type is derived.

### [Set-MgSiteListContentTypeColumnSourceColumnByRef](Set-MgSiteListContentTypeColumnSourceColumnByRef.md)
The source column for the content type column.

### [Set-MgSiteListDriveByRef](Set-MgSiteListDriveByRef.md)
Only present on document libraries.
Allows access to the list as a [drive][] resource with [driveItems][driveItem].

### [Set-MgSiteListItemAnalyticByRef](Set-MgSiteListItemAnalyticByRef.md)
Analytics about the view activities that took place on this item.

### [Set-MgSiteListItemDriveItemByRef](Set-MgSiteListItemDriveItemByRef.md)
For document libraries, the driveItem relationship exposes the listItem as a [driveItem][]

### [Set-MgSiteTermStoreGroupSetChildRelationFromTermByRef](Set-MgSiteTermStoreGroupSetChildRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Set-MgSiteTermStoreGroupSetChildRelationSetByRef](Set-MgSiteTermStoreGroupSetChildRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Set-MgSiteTermStoreGroupSetChildRelationToTermByRef](Set-MgSiteTermStoreGroupSetChildRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Set-MgSiteTermStoreGroupSetChildSetByRef](Set-MgSiteTermStoreGroupSetChildSetByRef.md)
The [set] in which the term is created.

### [Set-MgSiteTermStoreGroupSetRelationFromTermByRef](Set-MgSiteTermStoreGroupSetRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Set-MgSiteTermStoreGroupSetRelationSetByRef](Set-MgSiteTermStoreGroupSetRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Set-MgSiteTermStoreGroupSetRelationToTermByRef](Set-MgSiteTermStoreGroupSetRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Set-MgSiteTermStoreGroupSetTermRelationFromTermByRef](Set-MgSiteTermStoreGroupSetTermRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Set-MgSiteTermStoreGroupSetTermRelationSetByRef](Set-MgSiteTermStoreGroupSetTermRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Set-MgSiteTermStoreGroupSetTermRelationToTermByRef](Set-MgSiteTermStoreGroupSetTermRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Set-MgSiteTermStoreGroupSetTermSetByRef](Set-MgSiteTermStoreGroupSetTermSetByRef.md)
The [set] in which the term is created.

### [Set-MgSiteTermStoreSetChildRelationFromTermByRef](Set-MgSiteTermStoreSetChildRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Set-MgSiteTermStoreSetChildRelationSetByRef](Set-MgSiteTermStoreSetChildRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Set-MgSiteTermStoreSetChildRelationToTermByRef](Set-MgSiteTermStoreSetChildRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Set-MgSiteTermStoreSetChildSetByRef](Set-MgSiteTermStoreSetChildSetByRef.md)
The [set] in which the term is created.

### [Set-MgSiteTermStoreSetRelationFromTermByRef](Set-MgSiteTermStoreSetRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Set-MgSiteTermStoreSetRelationSetByRef](Set-MgSiteTermStoreSetRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Set-MgSiteTermStoreSetRelationToTermByRef](Set-MgSiteTermStoreSetRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Set-MgSiteTermStoreSetTermRelationFromTermByRef](Set-MgSiteTermStoreSetTermRelationFromTermByRef.md)
The from [term] of the relation.
The term from which the relationship is defined.
A null value would indicate the relation is directly with the [set].

### [Set-MgSiteTermStoreSetTermRelationSetByRef](Set-MgSiteTermStoreSetTermRelationSetByRef.md)
The [set] in which the relation is relevant.

### [Set-MgSiteTermStoreSetTermRelationToTermByRef](Set-MgSiteTermStoreSetTermRelationToTermByRef.md)
The to [term] of the relation.
The term to which the relationship is defined.

### [Set-MgSiteTermStoreSetTermSetByRef](Set-MgSiteTermStoreSetTermSetByRef.md)
The [set] in which the term is created.

### [Test-MgSiteContentTypeBasePublished](Test-MgSiteContentTypeBasePublished.md)
Invoke function isPublished

### [Test-MgSiteContentTypePublished](Test-MgSiteContentTypePublished.md)
Invoke function isPublished

### [Test-MgSiteListContentTypeBasePublished](Test-MgSiteListContentTypeBasePublished.md)
Invoke function isPublished

### [Test-MgSiteListContentTypePublished](Test-MgSiteListContentTypePublished.md)
Invoke function isPublished

### [Unpublish-MgSiteContentType](Unpublish-MgSiteContentType.md)
Invoke action unpublish

### [Unpublish-MgSiteContentTypeBase](Unpublish-MgSiteContentTypeBase.md)
Invoke action unpublish

### [Unpublish-MgSiteListContentType](Unpublish-MgSiteListContentType.md)
Invoke action unpublish

### [Unpublish-MgSiteListContentTypeBase](Unpublish-MgSiteListContentTypeBase.md)
Invoke action unpublish

### [Update-MgGroupSite](Update-MgGroupSite.md)
The list of SharePoint sites in this group.
Access the default site with /sites/root.

### [Update-MgSite](Update-MgSite.md)
Update entity in sites

### [Update-MgSiteColumn](Update-MgSiteColumn.md)
The collection of column definitions reusable across lists under this site.

### [Update-MgSiteContentType](Update-MgSiteContentType.md)
The collection of content types defined for this site.

### [Update-MgSiteContentTypeColumn](Update-MgSiteContentTypeColumn.md)
The collection of column definitions for this contentType.

### [Update-MgSiteContentTypeColumnLink](Update-MgSiteContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [Update-MgSiteList](Update-MgSiteList.md)
The collection of lists under this site.

### [Update-MgSiteListColumn](Update-MgSiteListColumn.md)
The collection of field definitions for this list.

### [Update-MgSiteListContentType](Update-MgSiteListContentType.md)
The collection of content types present in this list.

### [Update-MgSiteListContentTypeColumn](Update-MgSiteListContentTypeColumn.md)
The collection of column definitions for this contentType.

### [Update-MgSiteListContentTypeColumnLink](Update-MgSiteListContentTypeColumnLink.md)
The collection of columns that are required by this content type.

### [Update-MgSiteListItem](Update-MgSiteListItem.md)
All items contained in the list.

### [Update-MgSiteListItemField](Update-MgSiteListItemField.md)
The values of the columns set on this list item.

### [Update-MgSiteListItemVersion](Update-MgSiteListItemVersion.md)
The list of previous versions of the list item.

### [Update-MgSiteListItemVersionField](Update-MgSiteListItemVersionField.md)
A collection of the fields and values for this version of the list item.

### [Update-MgSiteListSubscription](Update-MgSiteListSubscription.md)
The set of subscriptions on the list.

### [Update-MgSiteOnenotePageContent](Update-MgSiteOnenotePageContent.md)
Invoke action onenotePatchContent

### [Update-MgSitePermission](Update-MgSitePermission.md)
The permissions associated with the site.
Nullable.

### [Update-MgSiteTermStore](Update-MgSiteTermStore.md)
The default termStore under this site.

### [Update-MgSiteTermStoreGroup](Update-MgSiteTermStoreGroup.md)
Collection of all groups available in the term store.

### [Update-MgSiteTermStoreGroupSet](Update-MgSiteTermStoreGroupSet.md)
All sets under the group in a term [store].

### [Update-MgSiteTermStoreGroupSetChild](Update-MgSiteTermStoreGroupSetChild.md)
Children terms of set in term [store].

### [Update-MgSiteTermStoreGroupSetChildRelation](Update-MgSiteTermStoreGroupSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Update-MgSiteTermStoreGroupSetParentGroup](Update-MgSiteTermStoreGroupSetParentGroup.md)
The parent [group] that contains the set.

### [Update-MgSiteTermStoreGroupSetRelation](Update-MgSiteTermStoreGroupSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [Update-MgSiteTermStoreGroupSetTerm](Update-MgSiteTermStoreGroupSetTerm.md)
All the terms under the set.

### [Update-MgSiteTermStoreGroupSetTermChild](Update-MgSiteTermStoreGroupSetTermChild.md)
Children of current term.

### [Update-MgSiteTermStoreGroupSetTermRelation](Update-MgSiteTermStoreGroupSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Update-MgSiteTermStoreSet](Update-MgSiteTermStoreSet.md)
Collection of all sets available in the term store.

### [Update-MgSiteTermStoreSetChild](Update-MgSiteTermStoreSetChild.md)
Children terms of set in term [store].

### [Update-MgSiteTermStoreSetChildRelation](Update-MgSiteTermStoreSetChildRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

### [Update-MgSiteTermStoreSetParentGroup](Update-MgSiteTermStoreSetParentGroup.md)
The parent [group] that contains the set.

### [Update-MgSiteTermStoreSetParentGroupSet](Update-MgSiteTermStoreSetParentGroupSet.md)
All sets under the group in a term [store].

### [Update-MgSiteTermStoreSetRelation](Update-MgSiteTermStoreSetRelation.md)
Indicates which terms have been pinned or reused directly under the set.

### [Update-MgSiteTermStoreSetTerm](Update-MgSiteTermStoreSetTerm.md)
All the terms under the set.

### [Update-MgSiteTermStoreSetTermChild](Update-MgSiteTermStoreSetTermChild.md)
Children of current term.

### [Update-MgSiteTermStoreSetTermRelation](Update-MgSiteTermStoreSetTermRelation.md)
To indicate which terms are related to the current term as either pinned or reused.

